# operational-problem-solver

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/problem-solver/: SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  HANDOFF.md  SESSION-HANDOFF.md  index.html
src/ops_solver/: __init__.py  cli.py  config.py  elo.py  env_probe.py  execution.py  intelligence.py  llm.py  models.py  orchestrator.py  qa_consensus.py
tests/: conftest.py  test_consensus.py  test_dotenv.py  test_elo.py  test_env_probe.py  test_execution.py  test_fanout.py  test_llm_helpers.py  test_orchestrator.py  test_tournament.py
